# Recipe-Management-Application-

./: .env  README.md  pyproject.toml  pyrightconfig.json
app/: database.py  main.py  models.py  schemas.py
app/routes/: ai.py  recipes.py
frontend/: index.html  script.js  style.css
